--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,14 @@
     <a href="/selecionar">
     <button>selecionar</button>
 
+    <a href="/perguntas">
+    <button>Perguntas</button>
+
+    <a href="/classificar">
+    <button>classificar</button>
+
+    <a href="/citacoes">
+    <button>citacoes</button>
     </a>
 </body>
 </html>
