--- a/templates/audio.html
+++ b/templates/audio.html
@@ -13,19 +13,20 @@
         <p class="subtitulo-resumo">Converta o resumo do artigo de pesquisa em formato de áudio para ouvir em qualquer lugar.</p> 
 
 
-        <a href="static/pdf/artigocient.pdf" target="_blank">
-    <div class="pdf-container">
-        <img class="pdf-icon" src="static/img/pdf-icon.png" alt="PDF Icon">
-        <p width: 200px;>Artigo-científico.pdf</p>
-        <!-- texto escondido pra ocupar espaço -->
-        <p style="visibility: hidden;">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
-    </div>
-        </a> <br>
+        <!-- PDF Card -->
+<div class="pdf-card">
+  <img src="{{ url_for('static', filename='img/pdf-icon.png') }}" alt="PDF Icon" class="pdf-icon">
+  <p>Artigo-científico.pdf</p>
+  <span class="pdf-size">0,33 MB</span>
+  <a href="{{ url_for('static', filename='pdf/artigocient.pdf') }}" target="_blank" class="btn-pdf">
+    Visualizar documento
+  </a>
+</div>
 
        <div class="palavras-chaves">
     <span class="keyword" onclick="escolherIdioma('pt')">Português (Brasil)</span>
     <span class="keyword" onclick="escolherIdioma('en')">Inglês (EUA)</span>
-</div>
+</div><br>
 
     <div class="resumo">
         <p>
